--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,8 @@ lib_deps =
 	adafruit/Adafruit BME280 Library@^2.1.2
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	evert-arias/EasyButton@^2.0.1
+	mbed-seeed/BluetoothSerial@0.0.0+sha.f56002898ee8
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++14
 monitor_speed = 115200
+;upload_port = /dev/tty.usbserial-00000000
