--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,7 @@ board = nodemcu-32s
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = 
-	adafruit/Adafruit BME280 Library@^2.1.2
-	marcoschwartz/LiquidCrystal_I2C@^1.1.4
-	evert-arias/EasyButton@^2.0.1
-	mbed-seeed/BluetoothSerial@0.0.0+sha.f56002898ee8
+	emelianov/modbus-esp8266@^4.0.0-DEV
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++14
 monitor_speed = 115200
-;upload_port = /dev/tty.usbserial-00000000
