--- a/data/config.json
+++ b/data/config.json
@@ -1,31 +1,11 @@
 {
-    
-    "ssid":"HetaDatain1",
-    "password":"Test@Run_1",
-
-    "root":"3222342507","id":"1",
-
-    "mfd":"1","mcp":"0",
-    "pins":"8","delay":"2",
-    "device_count":"5","sensor":"0",
-    "mfd_dev_id_1":"1","mfd_dev_id_2":"5",
-    "mfd_dev_id_3":"6","mfd_dev_id_4":"9",
-    "mfd_dev_id_5":"8",
-
-     "bme_min_temp":"20",
-   "bme_max_temp":"29",
-  "bme_min_hum":"20",
-  "bme_max_hum":"50",
-  "bme_prs_min":"9920",
-  "bme_prs_max":"9960",
-
-    "pin1min":"120","pin1max":"160",
-    "pin2min":"120","pin2max":"160",
-    "pin3min":"120","pin3max":"160",
-    "pin4min":"120","pin4max":"160",
-    "pin5min":"120","pin5max":"160",
-    "pin6min":"120","pin6max":"160",
-    "pin7min":"120","pin7max":"160",
-    "pin8min":"120","pin8max":"160"
-
+  "meshNodes": "config",
+  "ssid": "Hetadatain1",
+  "password": "Test@Run_1",
+  "root": 3222342507,
+  "id": "3",
+  "mfd": 1,
+  "mcp": "0",
+  "pins": "8",
+  "delay": "2"
 }
