--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,6 @@ lib_deps =
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++14
 monitor_speed = 115200
+
+debug_tool = esp-prog
+;upload_protocol = esp-prog
