commit on master

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,9 +15,9 @@ framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 lib_deps = 
 	emelianov/modbus-esp8266@^4.0.0-DEV
+	sandeepmistry/LoRa@^0.8.0
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++14
 monitor_speed = 115200
-
+upload_speed = 921600
 debug_tool = esp-prog
-;upload_protocol = esp-prog
